--- a/frontend/src/modules/stakeholder-overview/styles.scss
+++ b/frontend/src/modules/stakeholder-overview/styles.scss
@@ -22,7 +22,9 @@
 #stakeholder-overview {
   padding: 0;
   position: relative;
-
+  @media (max-width: 400px) {
+    overflow: hidden;
+  }
   #stakeholder-item {
     background-color: rgba(255, 255, 255, 0.3);
     &:hover {
@@ -434,7 +436,9 @@
     position: absolute;
     min-width: calc(100% - 100px);
     overflow: hidden;
-
+    @media (max-width: 400px) {
+      width: 100%;
+    }
     @media (min-width: 750px) {
       top: 0 !important;
       left: 100px !important;
